[build-system]
requires = ["setuptools", "wheel", "setuptools_scm"] 
build-backend = "setuptools.build_meta"

[project]
name = "add_mnist"
dynamic = ["version"] 
description = " An inference pipeline which can successfully add two handwritten MNIST digits"
readme = "README.md"    
authors = [{ name = "Keying Song", email = "ks2146@cam.ac.uk" }]
         
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",     
    "Operating System :: OS Independent",
]


requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20",
    "matplotlib>=3.5",
    "tensorflow>=2.10",
    "scikit-learn>=1.0",
    "optuna>=3.0",
]


[tool.setuptools_scm] 
fallback_version = "0.0.0beta0"

[tool.setuptools.packages.find]
where = ["."]
include = ["add_mnist"]